apps/base/node-red/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: node-red
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
      - name: node-red
        image: nodered/node-red:4.1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 1880
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
      - name: storage
        emptyDir: {}
  strategy:
    canary:
      # Автоматичний перехід: спочатку 20%, через 30 секунд - 100%
      steps:
        - setWeight: 20
        - pause: { duration: 1m } 
        - setWeight: 100
