apps/base/node-red/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: ClusterIP
  selector:
    app: node-red
  ports:
    - port: 8080
      targetPort: 1880
